About Me update

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h3 class="section-heading">OmniPhoto</h3>
 					<div class="sub-title lead3">Collaborative Group Photo Sharing</div>
                     <p class="lead">
-						OmniPhoto was a concept project inspired by the frustrations of people looking to combine all of their photographs from an event together with other people. I used the entire UX spectrum during the project, including User Researching, Prototyping, Design and User Testing. 
+						OmniPhoto is a concept project inspired by the frustrations of people looking to combine all of their photographs from an event together with other people. I used the entire UX spectrum during the project, including User Researching, Prototyping, Design and User Testing. 
 					</p>
 
 					 <p>
@@ -154,7 +154,7 @@
 
 				 <div class="col-sm-6 col-sm-offset-3" >
 				 	<div id="about-paragraph" class="row">
-				 		<p>I'm a fanatic for problem-solving, and I believe even the most complex problems can be solved with great design. I started my career in customer service and sales before transitioning into UX design, and I excel in empathising with people to really get to the heart of a problem. I'm a whizz with HTML 5 and CSS3 and am a keen musician and photographer.</p>
+				 		<p>I'm a fanatic for problem-solving, and I believe even the most complex problems can be solved with great design. My career has spanned customer service and sales before transitioning into UX and front end design, and I excel in empathising with people to really get to the heart of a problem. I'm versed in HTML 5 and CSS3 and am a keen musician and photographer.</p>
 				 </div>
 			 </div>	
 		</div>
@@ -171,7 +171,7 @@
 				 </div>
 
 				 <div class="col-sm-4 col-sm-offset-4">
-				 	<p>I would love to hear from you, please feel free to get in touch using one of the below.</p>
+				 	<p>Want to get in touch? please feel free to use one of the methods below.</p>
 				 	<h4>Email : <a href="mailto:&#097;&#108;&#101;&#120;&#064;&#097;&#108;&#101;&#120;&#099;&#114;&#111;&#119;&#108;&#101;&#121;&#046;&#099;&#111;&#046;&#117;&#107;"> &#097;&#108;&#101;&#120;&#064;&#097;&#108;&#101;&#120;&#099;&#114;&#111;&#119;&#108;&#101;&#121;&#046;&#099;&#111;&#046;&#117;&#107;</a></h4>
 				 	<h4>Twitter : <a href="https://twitter.com/isavedalex" target="_blank">@isavedalex</a></h4>
 				 	<h4>LinkedIn : <a href="https://www.linkedin.com/in/alcrowley/" target="_blank">alcrowley</a>
