--- a/seanmahoney/index.html
+++ b/seanmahoney/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Sean Mahoney - Sound Designer & Composer</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,12 +34,35 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
+      <h1 class="maintitle">Sean Mahoney</h1>
+      <h5 class="subtitle">Sound Design | Composition</h5>
+    </div>
+    <div class="row">
+      <nav class="navbar">
+        <ul>
+          <li>About Me</li>
+          <li>Work</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
     </div>
   </div>
+
+  <div class="container">
+    <section>
+      <div class="row">
+        <h5>About Me</h5>
+      </div>
+      <div class="row">
+        <div class="six columns aboutme">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni voluptates eaque, beatae esse delectus. Perspiciatis distinctio nobis tenetur eveniet animi reiciendis temporibus fugit in alias illum veniam doloremque sapiente rem ipsum consequatur est nemo ex culpa vitae, laborum, vel velit ab explicabo, aliquam. Debitis cum, dolorum provident ratione itaque accusantium dolore quam expedita perferendis! Incidunt soluta recusandae sint laboriosam, magni accusamus minima dicta eligendi. Perferendis eos, fugiat libero reprehenderit voluptatum corporis in deleniti alias!</p>
+        </div>
+      </div>
+    </section>
+  </div>
+
+
+
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
