two options mahoney

--- a/seanmahoney/work.html
+++ b/seanmahoney/work.html
@@ -21,12 +21,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/custom2.css">
 
   <!-- JAVASCRIPT 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/script2.js"></script>
 
 
 
@@ -37,28 +37,20 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <h1 class="maintitle">Sean Mahoney</h1>
-      <h5 class="subtitle">Sound Design | Composition</h5>
-    </div>
-
   <!-- Navigation
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <div class="row">
-      <nav class="navbar">
+      <nav class="navbar fixedtop">
         <ul>
           <li>
-            <a class="navlink" href="#work">Work</a>
+            <a class="navlink" href="work.html">Work</a>
           </li>
           <li>
-            <a class="navlink" href="#aboutme">About Me</a>
+            <a class="navlink" href="aboutme.html">About Me</a>
           </li>
           <li>
-            <a class="navlink" href="#contact">Contact</a> 
+            <a class="navlink" href="contact.html">Contact</a> 
           </li>
         </ul>
       </nav>
@@ -115,48 +107,7 @@
     </section>
 
 
-
-  <!-- About
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div id="aboutme"></div>
-    <div class="container">
-      <section>
-        <div class="row borderbottom">
-          <div class="six columns work offset-by-three">
-            <h4>About Me</h4>
-          </div>
-        </div>
-        <div class="row centerrow">
-          <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni voluptates eaque, beatae esse delectus. Perspiciatis distinctio nobis tenetur eveniet animi reiciendis temporibus fugit in alias illum veniam doloremque sapiente rem ipsum consequatur est nemo ex culpa vitae, laborum, vel velit ab explicabo, aliquam. Debitis cum, dolorum provident ratione itaque accusantium dolore quam expedita perferendis! Incidunt soluta recusandae sint laboriosam, magni accusamus minima dicta eligendi. Perferendis eos, fugiat libero reprehenderit voluptatum corporis in deleniti alias!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni 
-          </p>
-        </div>
-      </section>
-    </div>
-  </div>
-
-
-  <!-- Contact
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div id="contact"></div>
-    <div class="container">
-      <section>
-        <div class="row borderbottom">
-          <div class="six columns work offset-by-three">
-            <h4>Contact</h4>
-          </div>
-        </div>
-        <div class="row centerrow">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae mollitia, maxime sequi consectetur id numquam nostrum, ratione adipisci amet non aspernatur</p>
-          <a class="sociallink" href="mailto:hello@seanmahoney.com">hello@seanmahoney.com</a>
-          <a class="sociallink" href="https://vimeo.com/seanmahoney" target="_blank">Vimeo</a>
-          <a class="sociallink" href="" target="_blank">Soundcloud</a> 
-          <a class="sociallink" href="https://www.linkedin.com/in/sean-mahoney-754286111/" target="_blank">Linked In</a>
-        </div>
-      </section>
-    </div>
-
+  
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
