--- a/seanmahoney/index.html
+++ b/seanmahoney/index.html
@@ -149,7 +149,7 @@
         </div>
         <div class="row centerrow">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae mollitia, maxime sequi consectetur id numquam nostrum, ratione adipisci amet non aspernatur</p>
-          <a class="sociallink" href="mailto:hello@seanmahoney.com">hello@seanmahoney.com</a>
+          <a class="sociallink" href="mailto:me@seanmahoney.co.uk">me@seanmahoney.co.uk</a>
           <a class="sociallink" href="https://vimeo.com/seanmahoney" target="_blank">Vimeo</a>
           <a class="sociallink" href="" target="_blank">Soundcloud</a> 
           <a class="sociallink" href="https://www.linkedin.com/in/sean-mahoney-754286111/" target="_blank">Linked In</a>
