--- a/jointcstdy/index.html
+++ b/jointcstdy/index.html
@@ -12,7 +12,9 @@
 <body>
 	<header>
 		<div class="banner">
-		<img src="img/banner.png">
+			<div>
+				<h1>Joint Custody</h1>
+			</div>
 		</div>
 	</header>
 	<section class="hero">
@@ -40,6 +42,11 @@
 		<a href="https://www.youtube.com/channel/UCuvZRry9ZhOIy-5cByFs6XQ" target="_blank">
 			<span>
 				<i class="fab fa-youtube"></i>
+			</span>
+		</a>	
+		<a href="https://open.spotify.com/artist/3V41KhaaAANiSGDCL43F1t? si=vgyK1YEHQPmBZbpac75QOQ" target="_blank">
+			<span>
+				<i class="fab fa-itunes"></i>
 			</span>
 		</a>	
 		<a href="https://open.spotify.com/artist/3V41KhaaAANiSGDCL43F1t? si=vgyK1YEHQPmBZbpac75QOQ" target="_blank">
