Apple music link update

--- a/jointcstdy/index.html
+++ b/jointcstdy/index.html
@@ -44,7 +44,7 @@
 				<i class="fab fa-youtube"></i>
 			</span>
 		</a>	
-		<a href="https://open.spotify.com/artist/3V41KhaaAANiSGDCL43F1t? si=vgyK1YEHQPmBZbpac75QOQ" target="_blank">
+		<a href="https://itunes.apple.com/gb/artist/joint-custody/1335761276" target="_blank">
 			<span>
 				<i class="fab fa-itunes"></i>
 			</span>
