--- a/jointcstdy/index.html
+++ b/jointcstdy/index.html
@@ -19,9 +19,11 @@
 	</header>
 	<section class="hero">
 		<h2>Music</h2>
-		<a href="https://jntcstdy.bandcamp.com/releases" target="_blank">
-			<img src="img/milkalbum.jpg">
-		</a>
+		<div class="imagehover">
+			<a href="https://jntcstdy.bandcamp.com/releases" target="_blank">
+				<img src="img/milkalbum.jpg">
+			</a>
+		</div>	
 	</section>
 	<section class="socials">
 		<a href="https://www.facebook.com/JNTCSTDY/" target="_blank">
