--- a/seanmahoney/aboutme.html
+++ b/seanmahoney/aboutme.html
@@ -63,15 +63,22 @@
     <div id="aboutme"></div>
     <div class="container">
       <section>
-        <div class="row borderbottom">
+        <div class="row">
           <div class="six columns work offset-by-three">
             <h4>About Me</h4>
           </div>
         </div>
-        <div class="row centerrow">
-          <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni voluptates eaque, beatae esse delectus. Perspiciatis distinctio nobis tenetur eveniet animi reiciendis temporibus fugit in alias illum veniam doloremque sapiente rem ipsum consequatur est nemo ex culpa vitae, laborum, vel velit ab explicabo, aliquam. Debitis cum, dolorum provident ratione itaque accusantium dolore quam expedita perferendis! Incidunt soluta recusandae sint laboriosam, magni accusamus minima dicta eligendi. Perferendis eos, fugiat libero reprehenderit voluptatum corporis in deleniti alias!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni 
+        <div class="row centerrow bio">
+          	<p>
+	          An experienced and passionate sound recordist and designer - I have years of experience of on-set, location and foley recording and post-production designing and mixing. A love of music and sound-art has taken me on a creative journey from touring the world in bands and album engineering into film, commercial and television sound recording, mixing and designing.
+      		</p>
+
+			<p>
+				A true musical ear combined with an acute attention to detail allows me to tackle any brief or project with professionalism, enthusiasm and, above all, a total devotion to the wonders of sound.
+			</p>
+
+			<p>
+				I enjoy projects of all sizes so don’t hesitate to get in touch.
           </p>
         </div>
       </section>
