--- a/jointcstdy/index.html
+++ b/jointcstdy/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="banner">
 			<div>
-				<h1>Joint Custody</h1>
+				<h1>Joint Custody.</h1>
 			</div>
 		</div>
 	</header>
