--- a/jointcstdy/index.html
+++ b/jointcstdy/index.html
@@ -17,6 +17,17 @@
 			</div>
 		</div>
 	</header>
+
+	<!-- SPOTIFY FOLLOW BUTTON -->
+	 <div class="spotify">
+                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:3V41KhaaAANiSGDCL43F1t&size=basic&theme=light&show-count=0" width="200" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+            </div>
+	<!-- END SPOTIFY FOLLOW BUTTON -->
+
+
+
+
+	<!-- MAIN IMAGE AND LINK EDIT HERE -->
 	<section class="hero">
 		<div class="imagehover">
 			<a href="https://jntcstdy.bandcamp.com/releases" target="_blank">
@@ -24,6 +35,15 @@
 			</a>
 		</div>	
 	</section>
+
+	<!-- MAIN IMAGE END -->
+
+
+
+
+
+
+	<!-- SOCIAL LINKS -->
 	<section class="socials">
 		<a href="https://www.facebook.com/JNTCSTDY/" target="_blank">
 			<span>
@@ -61,12 +81,31 @@
 			</span>
 		</a>	
 	</section>
+	<!-- END SOCIAL LINKS -->
+
+	<!-- Begin MailChimp Signup Form -->
 	<section class="email">
 		<h2>Email</h2>
-    	<input type="text"  name="email" required>
-    	<br>
-		<button type="submit" class="signupbtn">Subscribe</button>		
+		<div id="mc_embed_signup">
+		<form action="https://jointcustodyband.us18.list-manage.com/subscribe/post?u=a36bf67f4844a6f7ac323285b&amp;id=aa818295be" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		    <div id="mc_embed_signup_scroll">
+		<div class="mc-field-group">
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a36bf67f4844a6f7ac323285b_aa818295be" tabindex="-1" value=""></div>
+		    <div class="clear">
+		    	<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">Subscribe</button>
+		    </div>
+		    </div>
+		</form>
+		</div>
+		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 	</section>
+	<!--End mc_embed_signup-->
 
 	<footer>
 		&copy;2018 Joint Custody
