--- a/seanmahoney/index2.html
+++ b/seanmahoney/index2.html
@@ -35,12 +35,11 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body>
+<body class="index">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
+    <div class="center-text">
       <h1 class="maintitle">Sean Mahoney</h1>
       <h5 class="subtitle">Sound Design | Composition</h5>
     </div>
@@ -49,7 +48,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <div class="row">
-      <nav class="navbar fixed">
+      <nav class="navbar fixed navbarhome">
         <ul>
           <li>
             <a class="navlink" href="work.html">Work</a>
