--- a/seanmahoney/contact.html
+++ b/seanmahoney/contact.html
@@ -44,6 +44,9 @@
       <nav class="navbar fixedtop">
         <ul>
           <li>
+            <a class="navlink" href="index2.html">Home</a>
+          </li>
+          <li>
             <a class="navlink" href="work.html">Work</a>
           </li>
           <li>
