--- a/seanmahoney/aboutme.html
+++ b/seanmahoney/aboutme.html
@@ -13,15 +13,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom2.css">
+  <link rel="stylesheet" href="css/custom.css">
 
   <!-- JAVASCRIPT 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -44,7 +42,7 @@
       <nav class="navbar fixedtop">
         <ul>
           <li>
-            <a class="navlink" href="index2.html">Home</a>
+            <a class="navlink" href="index.html">Home</a>
           </li>
           <li>
             <a class="navlink" href="work.html">Work</a>
