--- a/seanmahoney/index.html
+++ b/seanmahoney/index.html
@@ -13,10 +13,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -26,7 +22,7 @@
   <!-- JAVASCRIPT 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/script2.js"></script>
 
 
 
@@ -35,12 +31,11 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body>
+<body class="index">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
+    <div class="center-text">
       <h1 class="maintitle">Sean Mahoney</h1>
       <h5 class="subtitle">Sound Design | Composition</h5>
     </div>
@@ -49,16 +44,16 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <div class="row">
-      <nav class="navbar">
+      <nav class="navbar fixed navbarhome">
         <ul>
           <li>
-            <a class="navlink" href="#work">Work</a>
+            <a class="navlink" href="work.html">Work</a>
           </li>
           <li>
-            <a class="navlink" href="#aboutme">About Me</a>
+            <a class="navlink" href="aboutme.html">About Me</a>
           </li>
           <li>
-            <a class="navlink" href="#contact">Contact</a> 
+            <a class="navlink" href="contact.html">Contact</a> 
           </li>
         </ul>
       </nav>
@@ -66,97 +61,7 @@
   </div>
   <div class="status"></div>
 
-  <!-- Work
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->  
-  <div id="work"></div>
-  <div class="container">
-    <section>
-      <div class="row borderbottom">
-        <div class="six columns work offset-by-three">
-          <h4>Work</h4>
-        </div>
-      </div>
-      <div class="row centerrow">
-          <h5>Oh Wonder - All We Do</h5>
-          <iframe src="https://player.vimeo.com/video/198209093" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          <h6>Location recording - Additional foley</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis magnam inventore fuga, omnis repellendus earum error nisi explicabo consequuntur quia ipsa modi in quo dolores neque rerum animi excepturi asperiores dolore aliquam odio. Tempore hic sunt quasi mollitia voluptatem minima, commodi aliquam maiores quaerat aperiam perferendis veritatis ipsum distinctio quo!
-          </p>
-      </div>
-      
-      <div class="row centerrow">
-          <h5>Edinburgh International Film Festival</h5>    
-          <iframe src="https://player.vimeo.com/video/235126987" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          <h6>Boom operator - Location recording</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
-          </p>
-       </div>
-
-       <div class="row centerrow">
-          <h5>The Nice One App</h5>    
-          <iframe src="https://player.vimeo.com/video/198211602" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          <h6>Composition - Sound Design</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
-          </p>
-       </div>
-
-        <div class="row centerrow">
-          <h5>Candy Floss - Short Film</h5>    
-          <iframe src="https://player.vimeo.com/video/198208964" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          <h6>Boom operator - Location recording</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
-          </p>
-       </div>  
-      </div> 
-    </section>
-
-
-
-  <!-- About
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div id="aboutme"></div>
-    <div class="container">
-      <section>
-        <div class="row borderbottom">
-          <div class="six columns work offset-by-three">
-            <h4>About Me</h4>
-          </div>
-        </div>
-        <div class="row centerrow">
-          <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni voluptates eaque, beatae esse delectus. Perspiciatis distinctio nobis tenetur eveniet animi reiciendis temporibus fugit in alias illum veniam doloremque sapiente rem ipsum consequatur est nemo ex culpa vitae, laborum, vel velit ab explicabo, aliquam. Debitis cum, dolorum provident ratione itaque accusantium dolore quam expedita perferendis! Incidunt soluta recusandae sint laboriosam, magni accusamus minima dicta eligendi. Perferendis eos, fugiat libero reprehenderit voluptatum corporis in deleniti alias!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius officiis esse impedit unde in. Quam accusantium quo quasi at dolor, commodi ipsa sint error omnis aliquid, laboriosam eius qui sit architecto aliquam fuga voluptatibus magni 
-          </p>
-        </div>
-      </section>
-    </div>
-  </div>
-
-
-  <!-- Contact
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div id="contact"></div>
-    <div class="container">
-      <section>
-        <div class="row borderbottom">
-          <div class="six columns work offset-by-three">
-            <h4>Contact</h4>
-          </div>
-        </div>
-        <div class="row centerrow">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae mollitia, maxime sequi consectetur id numquam nostrum, ratione adipisci amet non aspernatur</p>
-          <a class="sociallink" href="mailto:me@seanmahoney.co.uk">me@seanmahoney.co.uk</a>
-          <a class="sociallink" href="https://vimeo.com/seanmahoney" target="_blank">Vimeo</a>
-          <a class="sociallink" href="" target="_blank">Soundcloud</a> 
-          <a class="sociallink" href="https://www.linkedin.com/in/sean-mahoney-754286111/" target="_blank">Linked In</a>
-        </div>
-      </section>
-    </div>
-
+  
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
