--- a/seanmahoney/work.html
+++ b/seanmahoney/work.html
@@ -13,15 +13,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom2.css">
+  <link rel="stylesheet" href="css/custom.css">
 
   <!-- JAVASCRIPT 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -44,7 +42,7 @@
       <nav class="navbar fixedtop">
         <ul>
           <li>
-            <a class="navlink" href="index2.html">Home</a>
+            <a class="navlink" href="index.html">Home</a>
           </li>
           <li>
             <a class="navlink" href="work.html">Work</a>
@@ -72,39 +70,71 @@
         </div>
       </div>
       <div class="row centerrow">
+          <!-- VIDEO 1 TITLE -->
           <h5>Oh Wonder - All We Do</h5>
-          <iframe src="https://player.vimeo.com/video/198209093" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <!-- END VIDEO 1 TITLE -->
+
+          <!-- VIDEO 1 EMBED CODE -->
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/198209093?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+          <!-- END VIDEO 1 EMBED CODE -->
+
+          <!-- VIDEO 1 DESCRIPTION -->
           <h6>Location recording - Additional foley</h6>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis magnam inventore fuga, omnis repellendus earum error nisi explicabo consequuntur quia ipsa modi in quo dolores neque rerum animi excepturi asperiores dolore aliquam odio. Tempore hic sunt quasi mollitia voluptatem minima, commodi aliquam maiores quaerat aperiam perferendis veritatis ipsum distinctio quo!
           </p>
+          <!-- END VIDEO 1 DESCRIPTION -->
       </div>
       
       <div class="row centerrow">
-          <h5>Edinburgh International Film Festival</h5>    
-          <iframe src="https://player.vimeo.com/video/235126987" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <!-- VIDEO 2 TITLE -->
+          <h5>Edinburgh International Film Festival</h5>  
+          <!-- END VIDEO 2 TITLE -->  
+
+          <!-- VIDEO 2 EMBED CODE -->
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/235126987?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+          <!-- END VIDEO 2 EMBED CODE -->
+
+          <!-- VIDEO 2 DESCRIPTION -->
           <h6>Boom operator - Location recording</h6>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
           </p>
+          <!-- END VIDEO 2 DESCRIPTION -->
        </div>
 
        <div class="row centerrow">
-          <h5>The Nice One App</h5>    
-          <iframe src="https://player.vimeo.com/video/198211602" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <!-- VIDEO 3 TITLE -->
+          <h5>The Nice One App</h5>
+          <!-- END VIDEO 3 TITLE -->
+
+          <!-- VIDEO 3 EMBED CODE -->    
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/198211602?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+          <!-- END VIDEO 3 EMBED CODE -->
+
+          <!-- VIDEO 3 DESCRIPTION -->
           <h6>Composition - Sound Design</h6>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
           </p>
+          <!-- END VIDEO 3 DESCRIPTION -->
        </div>
 
         <div class="row centerrow">
-          <h5>Candy Floss - Short Film</h5>    
-          <iframe src="https://player.vimeo.com/video/198208964" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <!-- VIDEO 4 TITLE -->
+          <h5>Candy Floss - Short Film</h5>   
+          <!-- END VIDEO 4 TITLE -->
+
+          <!-- VIDEO 4 EMBED CODE --> 
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/198208964?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+          <!-- END VIDEO 4 EMBED CODE -->
+
+          <!-- VIDEO 4 DESCRIPTION -->
           <h6>Boom operator - Location recording</h6>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
           </p>
+          <!-- END VIDEO 4 DESCRIPTION -->
        </div>  
       </div> 
     </section>
