--- a/seanmahoney/aboutme.html
+++ b/seanmahoney/aboutme.html
@@ -5,9 +5,11 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Sean Mahoney - Sound Designer & Composer</title>
-  <meta name="description" content="">
+  <title>Sean Mahoney - Sound Designer & Composer - About Me</title>
+  <meta name="description" content="About Sean Mahoney, a London based sound designer & composer with years of experience of on-set, location and foley recording and post-production designing and mixing. I enjoy projects of all sizes, so please get in touch.">">
   <meta name="author" content="">
+  <link rel="canonical" href="https://www.seanmahoney.co.uk/aboutme.html">
+
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -79,7 +81,7 @@
 			</p>
 
 			<p>
-				I enjoy projects of all sizes so don’t hesitate to get in touch.
+				I enjoy projects of all sizes so don’t hesitate to <a href="contact.html">get in touch.</a>
           </p>
         </div>
       </section>
