--- a/seanmahoney/contact.html
+++ b/seanmahoney/contact.html
@@ -5,9 +5,11 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Sean Mahoney - Sound Designer & Composer</title>
-  <meta name="description" content="">
+  <title>Sean Mahoney - Sound Designer & Composer - Contact</title>
+  <meta name="description" content="London based sound designer & composer with years of experience of on-set, location and foley recording and post-production designing and mixing. I enjoy projects of all sizes, so please get in touch.">
   <meta name="author" content="">
+  <link rel="canonical" href="https://www.seanmahoney.co.uk/contact.html">
+
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -70,10 +72,9 @@
           </div>
         </div>
         <div class="row centerrow">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae mollitia, maxime sequi consectetur id numquam nostrum, ratione adipisci amet non aspernatur</p>
           <a class="sociallink" href="mailto:me@seanmahoney.co.uk">me@seanmahoney.co.uk</a>
           <a class="sociallink" href="https://vimeo.com/seanmahoney" target="_blank">Vimeo</a>
-          <a class="sociallink" href="" target="_blank">Soundcloud</a> 
+          <a class="sociallink" href="https://www.imdb.com/name/nm7893317/" target="_blank">IMDB</a> 
           <a class="sociallink" href="https://www.linkedin.com/in/sean-mahoney-754286111/" target="_blank">Linked In</a>
         </div>
       </section>
