--- a/seanmahoney/work.html
+++ b/seanmahoney/work.html
@@ -5,9 +5,10 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Sean Mahoney - Sound Designer & Composer</title>
-  <meta name="description" content="">
+  <title>Sean Mahoney - Latest Work</title>
+  <meta name="description" content="View Sean Mahoney's latest work, a London based sound designer & composer with years of experience of on-set, location and foley recording and post-production designing and mixing.">">
   <meta name="author" content="">
+  <link rel="canonical" href="https://www.seanmahoney.co.uk/work.html">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -77,13 +78,6 @@
           <!-- VIDEO 1 EMBED CODE -->
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/198209093?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <!-- END VIDEO 1 EMBED CODE -->
-
-          <!-- VIDEO 1 DESCRIPTION -->
-          <h6>Location recording - Additional foley</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis magnam inventore fuga, omnis repellendus earum error nisi explicabo consequuntur quia ipsa modi in quo dolores neque rerum animi excepturi asperiores dolore aliquam odio. Tempore hic sunt quasi mollitia voluptatem minima, commodi aliquam maiores quaerat aperiam perferendis veritatis ipsum distinctio quo!
-          </p>
-          <!-- END VIDEO 1 DESCRIPTION -->
       </div>
       
       <div class="row centerrow">
@@ -94,13 +88,6 @@
           <!-- VIDEO 2 EMBED CODE -->
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/235126987?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <!-- END VIDEO 2 EMBED CODE -->
-
-          <!-- VIDEO 2 DESCRIPTION -->
-          <h6>Boom operator - Location recording</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
-          </p>
-          <!-- END VIDEO 2 DESCRIPTION -->
        </div>
 
        <div class="row centerrow">
@@ -111,13 +98,6 @@
           <!-- VIDEO 3 EMBED CODE -->    
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/198211602?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <!-- END VIDEO 3 EMBED CODE -->
-
-          <!-- VIDEO 3 DESCRIPTION -->
-          <h6>Composition - Sound Design</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
-          </p>
-          <!-- END VIDEO 3 DESCRIPTION -->
        </div>
 
         <div class="row centerrow">
@@ -128,13 +108,6 @@
           <!-- VIDEO 4 EMBED CODE --> 
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/198208964?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <!-- END VIDEO 4 EMBED CODE -->
-
-          <!-- VIDEO 4 DESCRIPTION -->
-          <h6>Boom operator - Location recording</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus eveniet inventore id possimus sed distinctio iure! Ea expedita odio reiciendis blanditiis enim illum impedit perspiciatis quae culpa pariatur quisquam fuga, repellendus labore ipsam sit a, earum obcaecati ipsum sint rem. Porro ea est, ducimus autem qui quam laboriosam perferendis officia!
-          </p>
-          <!-- END VIDEO 4 DESCRIPTION -->
        </div>  
       </div> 
     </section>
