--- a/seanmahoney/index.html
+++ b/seanmahoney/index.html
@@ -8,6 +8,8 @@
   <title>Sean Mahoney - Sound Designer & Composer</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="canonical" href="https://www.seanmahoney.co.uk/index.html">
+
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -60,8 +62,6 @@
     </div>
   </div>
   <div class="status"></div>
-
-  
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
