--- a/seanmahoney/work.html
+++ b/seanmahoney/work.html
@@ -40,7 +40,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <div class="row">
-      <nav class="navbar fixedtop">
+      <nav class="navbar fixed navbarbg">
         <ul>
           <li>
             <a class="navlink" href="index.html">Home</a>
