--- a/seanmahoney/contact.html
+++ b/seanmahoney/contact.html
@@ -41,7 +41,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <div class="row">
-      <nav class="navbar fixedtop">
+      <nav class="navbar fixed navbarbg">
         <ul>
           <li>
             <a class="navlink" href="index.html">Home</a>
